--- a/static/steps.css
+++ b/static/steps.css
@@ -6,6 +6,7 @@ body {
 
 #container {
   width: 100%;
+  height: 100%;
 }
 
 #header {
@@ -13,17 +14,12 @@ body {
   font-size: 2rem;
 }
 
-#footer {
-  text-align: center;
-  font-size: 0.75rem;
-}
-
 .box {
   border-width: 2px;
   border-radius: 6px;
   border-style: solid;
-  padding: 4px;
-  margin: 4px;
+  padding: 0.5rem;
+  margin: 1rem;
 }
 
 p {
@@ -31,12 +27,24 @@ p {
   margin-bottom: 0.5rem;
 }
 
-ul {
-
-}
 
 #suggestions {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+#footer {
+  text-align: center;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 2rem;
+}
+
+.tab {
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  padding-bottom: 1em;
+  display: inline-block;
 }
 
