--- a/static/steps.css
+++ b/static/steps.css
@@ -1,8 +1,41 @@
+/* for gmaps */
+html { 
+  height: 100%;
+}
+
+#map-canvas {
+  height: 100%;
+  width: 100%;
+}
+
+.hidden{
+  visibility: hidden;
+}
+
+.hiddenMap{
+  visibility: : hidden;
+}
+
+.visible{
+  visibility: visible;
+}
+
+.visibleMap{
+  visibility: visible;
+}
 
 body {
+  /* for gmaps */
+  height: 85%;
+  margin: 0;
+  padding: 0;
+
+  /* general style */
   font-family: Helvetica, sans-serif;
   text-align: justify;
 }
+
+/* general style */
 
 #container {
   width: 100%;
@@ -12,6 +45,7 @@ body {
 #header {
   text-align: center;
   font-size: 2rem;
+  height: 7%;
 }
 
 .box {
@@ -38,7 +72,8 @@ p {
   position: fixed;
   bottom: 0px;
   width: 100%;
-  height: 2rem;
+  height: 5%;
+  /*height: 2rem;*/
 }
 
 .tab {
