--- a/static/steps.css
+++ b/static/steps.css
@@ -72,14 +72,18 @@ p {
   position: fixed;
   bottom: 0px;
   width: 100%;
-  height: 5%;
-  /*height: 2rem;*/
+  height: 3rem;
 }
 
 .tab {
   padding-left: 2.5%;
   padding-right: 2.5%;
-  padding-bottom: 1em;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   display: inline-block;
+
+  border-width: 1px;
+  border-radius: 4px;
+  border-style: solid;
 }
 
