--- a/static/steps.css
+++ b/static/steps.css
@@ -72,18 +72,27 @@ p {
   position: fixed;
   bottom: 0px;
   width: 100%;
-  height: 3rem;
+  height: 4rem;
+
+  border-top: 1px;
+  border-style: solid;
+
+  background-color: black;
 }
 
 .tab {
   padding-left: 2.5%;
   padding-right: 2.5%;
   padding-top: 1rem;
+  margin-top: 0.5rem;
   padding-bottom: 1rem;
+  margin-bottom: 1rem;
   display: inline-block;
 
   border-width: 1px;
   border-radius: 4px;
   border-style: solid;
+
+  background-color: white;
 }
 
