--- a/static/style.css
+++ b/static/style.css
@@ -58,7 +58,7 @@ body {
 .box {
   background-color: white;
   border-width: 2px;
-  border-radius: 6px;
+  border-radius: 8px;
   border-style: solid;
   padding: 0.5rem;
   margin: 1rem;
@@ -73,6 +73,29 @@ p {
 #suggestions {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+#foodSuggestions {
+  padding: 0px;
+}
+
+.suggestion {
+  width: 100%;
+  height: 1.5rem;
+  border-bottom: 2px;
+  border-style: solid;
+  padding-top: 0.5rem;
+  padding: 0.25rem;
+  vertical-align: middle;
+}
+
+.suggestion:first {
+  border-radius: 8px;
+  border-top: 1px;
+}
+
+.suggestion:last {
+  border-radius: 8px;
 }
 
 #footer {
@@ -98,7 +121,7 @@ p {
   display: inline-block;
 
   border-width: 1px;
-  border-radius: 4px;
+  border-radius: 8px;
   border-style: solid;
 
   background-color: white;
