--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@
 html {
   height: 100%;
   background-color: black;
+  font-size: 0.9rem;
 }
 
 a {
@@ -31,7 +32,7 @@ a {
 
 body {
   /* for gmaps */
-  height: 85%;
+  height: 85%; /* TODO: I think this is causing a bug */
   margin: 0;
   padding: 0;
 
@@ -52,7 +53,7 @@ body {
 
   background-color: white;
   text-align: center;
-  font-size: 25px;
+  font-size: 25px; /* TODO: rems */
 }
 
 .box {
@@ -81,12 +82,9 @@ p {
 
 .suggestion {
   width: 100%;
-  height: 1.5rem;
   border-bottom: 2px;
   border-style: solid;
-  padding-top: 0.5rem;
-  padding: 0.25rem;
-  vertical-align: middle;
+  padding: 0.5rem;
 }
 
 .suggestion:first {
