--- a/static/style.css
+++ b/static/style.css
@@ -87,16 +87,17 @@ li:last-child {
   border-bottom: none;
 }
 
+.buttonDown {
+  background-color: blue;
+  color: white;
+}
+
 #footer {
   text-align: center;
   position: fixed;
   bottom: 0px;
   width: 100%;
   height: 4rem;
-
-  border-top: 1px;
-  border-style: solid;
-  border-color: #8C8C8B;
 
   background-color: #45C2C5;
 }
