Make links appear on lower line
Check out this iterative design

--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,10 @@ a {
   visibility: visible;
 }
 
+.link {
+  display: block;
+}
+
 body {
   /* for gmaps */
   height: 85%; /* TODO: I think this is causing a bug */
