--- a/static/style.css
+++ b/static/style.css
@@ -161,9 +161,13 @@ li:last-child {
 /* TODO */
 #overlay {
   position: fixed;
-  top: 20%;
-  height: 60%;
-  margin: 1rem;
+  top: 10%;
+  height: 80%;
+  margin-left: 5%;
+  width: 90%;
+  text-align: center;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 #exercise-name {
