--- a/static/style.css
+++ b/static/style.css
@@ -161,6 +161,13 @@ li:last-child {
 /* TODO */
 #overlay {
   position: fixed;
+  top: 20%;
+  height: 60%;
+  margin: 1rem;
+}
+
+#loading{
+  position: fixed;
   top: 10%;
   height: 80%;
   margin-left: 5%;
