loading in each, fixed scroll bug (i think)

--- a/static/loadAnimation.css
+++ b/static/loadAnimation.css
@@ -32,6 +32,8 @@
   
   opacity: 0.95;
 
+  padding-top: 10%;
+
   font-size: 48px;
   font-family: Tahoma, Geneva, sans-serif;
   font-style: bold;
