--- a/static/style.css
+++ b/static/style.css
@@ -66,7 +66,7 @@ a {
 
 body {
   /* for gmaps */
-  height: 85%; /* TODO: I think this is causing a bug */
+  height: 100%; /* TODO: I think this is causing a bug */
   margin: 0;
   padding-bottom: 100px; /*should fix scroll prob*/
   /*padding: 0;*/
@@ -130,15 +130,25 @@ li:last-child {
   color: white;
 }
 
+#bodyid{
+  padding-bottom: 4rem;
+}
+
 #footer {
   text-align: center;
-  position: fixed;
+  position: absolute;
   bottom: 0px;
+  left: 0px;
   width: 100%;
   height: 4rem;
   padding-bottom: 32px;
 
   background-color: #45C2C5;
+}
+
+#wrapper{
+  min-height: 100%;
+  position: relative;
 }
 
 .tab {
@@ -177,7 +187,7 @@ li:last-child {
 #loading {
   position: fixed;
   top: 10%;
-  height: 80%;
+  height: 60%;
   margin-left: 5%;
   width: 90%;
   text-align: center;
