--- a/static/style.css
+++ b/static/style.css
@@ -68,7 +68,6 @@ body {
   /* For gmaps */
   height: 100%; /* TODO: I think this is causing a bug */
   margin: 0;
-  padding-bottom: 100px; /* Should fix scroll problem */
 
   font-family: Helvetica, sans-serif;
   text-align: justify;
@@ -127,17 +126,16 @@ li:last-child {
 }
 
 #bodyid{
-  padding-bottom: 4rem;
+  padding-bottom: 84px;
 }
 
 #footer {
   text-align: center;
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   left: 0px;
   width: 100%;
-  height: 4rem;
-  padding-bottom: 32px;
+  height: 84px;
 
   background-color: #45C2C5;
 }
