--- a/static/style.css
+++ b/static/style.css
@@ -51,7 +51,7 @@ a {
 }
 
 #map-canvas {
-  height: 100%;
+  height: 250px;
   width: 100%;
 }
 
@@ -206,7 +206,7 @@ li:last-child {
 #loading {
   position: fixed;
   top: 10%;
-  height: 60%;
+  height: 40%;
   margin-left: 5%;
   width: 90%;
   text-align: center;
